# common-use-safe-array

./: .gitignore  CMakeLists.txt  README.md
include/: array.hpp  complex.hpp  exception.hpp  range.hpp  types.hpp  vector2d.hpp
source/: complex.cpp  exception.cpp
test/: CMakeLists.txt  test_array.cpp
test/source/: test_array.cpp
